# J.A.R.V.I.S

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app_config.py  dashboard.py  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-voice.txt  requirements.txt  run_windows.ps1  setup.sh  setup_windows.ps1  test_acceptance.ps1  ui.py  ui.py.bak2
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
actions/: audit.py  browser.py  browser_agent.py  calendar.py  calendar_integrations.py  clipboard.py  database.py  desktop.py  documents.py  email_integration.py  files.py  health.py  html_safety.py  local_ai.py  local_assistant.py  local_memory.py  local_tasks.py  local_web.py  logging_utils.py  mcp_client.py  media.py  network.py  open_app.py  platform_utils.py  plugin_safety.py  plugin_system.py  reminders.py  safety.py  screen_vision.py  shell.py  smoke.py  sys_info.py  task_system.py  tts.py  voice_control.py  wake_word.py  weather.py  web_research.py  whatsapp.py  youtube_stats.py
config/: api_keys.example.json
core/: agent_runtime.py  audio_constants.py  jarvis_live.py  llm_client.py  logger.py  prompt.txt  tool_declarations.py  trace.py  transcript_guard.py  version.py
docs/: ARCHITECTURE.md  RELEASE.md  ROADMAP.md
helpers/: jarvis_calendar_helper.plist  jarvis_calendar_helper.swift  jarvis_screen_helper.plist  jarvis_screen_helper.swift
memory/: conversation_store.py  memory_manager.py  memory_store.py
plugins/builtin/browser/: plugin.json
plugins/builtin/filesystem/: plugin.json
scripts/: secret_scan.py
tests/: conftest.py  test_acceptance_gate.py  test_agent_runtime.py  test_browser_agent.py  test_calendar_integrations.py  test_conversation_store.py  test_desktop_clipboard_files.py  test_local_ai.py  test_local_assistant.py  test_local_tasks.py  test_mcp_client.py  test_memory_store.py  test_plugin_system.py  test_public_repo_hygiene.py  test_research_agent.py  test_runtime_logging.py  test_safety_audit.py  test_settings_dialog.py  test_shell_safety.py  test_task_system.py  test_trace.py  test_transcript_guard.py  test_ui_module_imports.py  test_voice_experience.py  test_window_defaults.py  test_windows_console_safety.py  test_windows_smoke.py
ui/: __init__.py  constants.py  controls.py  conversations.py  orb.py  panels.py  settings.py  sfx.py
(+3 files in other folders)
